--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=netflix-zuul-api-gateway-server
 server.port=8765
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+feign.client.config.default.connectTimeout=160000000
+feign.client.config.default.readTimeout=160000000
+ribbon.ConnectTimeout=120000
+ribbon.ReadTimeout=120000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+
+eureka.instance.hostname=localhost
